# aiollama

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  SD_CPP_VERSION
.github/workflows/: latest.yaml  release.yaml  test-llamacpp-update.yaml  test.yaml
api/: types.go
ci-local/: build-local.sh  local-build.yaml
cmake/: local.cmake
cmake/sdcpp/: CMakeLists.txt  CMakePresets.json  coexist_test.c
cmd/: cmd.go
docs/: ci-sdcpp-gap-analysis.md  development.md  e2e-test-gap-analysis.md  openai-api-conformance-report.md  openai-videos-api-migration.md  video-generation-implementation-plan.md
integration/: diffgen_test.go
integration/testdata/diffgen/flux2-dummy/: diffusion_model.gguf  llm.gguf  model_index.json  vae.safetensors
integration/testdata/diffgen/flux2-klein-4b/: model_index.json
integration/testdata/diffgen/wan2.1-t2v-1.3b/: model_index.json
integration/testdata/diffgen/wan2.1-t2v-1.3b-dummy/: model_index.json  t5xxl.gguf  vae.safetensors
integration/testdata/diffgen/wan2.2-t2v-a14b/: model_index.json
llm/: server.go
middleware/: openai.go  openai_test.go
openai/: openai.go  openai_test.go
parser/: parser.go  parser_test.go
runner/: runner.go
scripts/: build_darwin.sh  build_windows.ps1
server/: cloud_proxy.go  create.go  imageapi.go  imageapi_test.go  imagefiles.go  images.go  routes.go  routes_create_test.go  routes_generate_test.go  sched.go  sched_test.go  videoapi.go  videoapi_test.go
server/videojobs/: store.go  store_test.go  transcoder.go  transcoder_test.go
types/model/: capability.go
x/diffgen/: README.md  cli.go  context.go  context_sdcpp.go  detect.go  flags.go  image.go  memory.go  memory_test.go  runner.go  runner_test.go  server.go  stub.go  types.go  types_test.go  video.go  video_test.go
x/diffgen/manifest/: manifest.go
x/diffutil/: diffutil.go
x/imagegen/: cli.go
x/sdcpp/: sdcpp.go  sdcpp_test.go  sdcpp_test_helpers.go  types.go
x/sdcpp/include/: stable-diffusion.h
